# cc_proto_library_transition_issue

./: BUILD.bazel  WORKSPACE  rules.bzl
